# Budet-

./: .gitignore  Ensam Budget 2024-2025 - Budget.csv  FinanceHub.bat  FinanceHubDesktop.bat  PublishBudgetReport.bat  README.md  main.py  setup.bat  setup.ps1  start.bat  start.ps1
.github/workflows/: deploy-frontend-github-pages.yml
archive/: README.md
archive/runtime_legacy/: README.md  render.yaml
finance_hub/: .env.example  .env.production.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  requirements.txt
finance_hub/.github/workflows/: ci.yml
finance_hub/backend/: __init__.py  config.py  database.py  main.py  models.py  schemas.py
finance_hub/backend/routers/: analytics.py  auth.py  budget.py  loans.py  planning.py  workspace.py
finance_hub/docs/: architecture.md  data-model.md  deployment-netlify.md  deployment-production.md  desktop-wrapper.md  report-publishing.md
finance_hub/frontend/: .env.example  .env.production.example  index.html  package-lock.json  package.json  vite.config.ts
finance_hub/frontend/public/: 404.html  app-config.js  demo-budget.csv  manifest.webmanifest
finance_hub/frontend/src-tauri/: Cargo.toml  tauri.conf.json
finance_hub/frontend/src-tauri/src/: lib.rs  main.rs
finance_hub/scripts/: export_report.py  smoke_check.py
finance_hub/services/: __init__.py  auth.py  budget_planner.py  csv_parser.py  kpi_engine.py  note_parser.py  report_publisher.py  seed_finance.py
tools/windows/: install_daily_report_task.ps1  publish-report.bat  setup.bat  setup.ps1  start.bat  start.ps1  stop_finance_hub.ps1
(+12 files in other folders)
