[package]
name = "finance_hub_desktop"
version = "0.1.0"
description = "Finance Hub desktop wrapper"
authors = ["Finance Hub"]
edition = "2021"

[lib]
name = "finance_hub_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
